Bug 335939 - [iconitem] requesting icon with negative size crashes
Summary: [iconitem] requesting icon with negative size crashes
Status: RESOLVED FIXED
Alias: None
Product: libplasma
Classification: Frameworks and Libraries
Component: components (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Marco Martin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-08 04:41 UTC by Bhushan Shah
Modified: 2014-06-08 11:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bhushan Shah 2014-06-08 04:41:32 UTC
#7  0xb7490c9a in QSGSimpleTextureNode::setRect(QRectF const&) () from /usr/lib/libQt5Quick.so.5
#8  0xaf8332dd in IconItem::updatePaintNode (this=0xbfe6bd0, oldNode=0xbe51300, updatePaintNodeData=0xa646038) at /home/bshah/kdesrc/frameworks/plasma-framework/src/declarativeimports/core/iconitem.cpp:240
#9  0xb74ddcd5 in QQuickWindowPrivate::updateDirtyNode(QQuickItem*) () from /usr/lib/libQt5Quick.so.5
#10 0xb74dead4 in QQuickWindowPrivate::updateDirtyNodes() () from /usr/lib/libQt5Quick.so.5
#11 0xb74deb64 in QQuickWindowPrivate::syncSceneGraph() () from /usr/lib/libQt5Quick.so.5
Comment 1 Bhushan Shah 2014-06-08 04:44:28 UTC
I tried to fix this, https://git.reviewboard.kde.org/r/118613/
Comment 2 Bhushan Shah 2014-06-08 11:42:44 UTC
Git commit 86c1f46eaa2ffe3849e6e76c1ff2c8a27ed92a75 by Bhushan Shah.
Committed on 08/06/2014 at 17:09.
Pushed by bshah into branch 'master'.

Prevent crash when requesting icon with negative size

REVIEW: 118613

M  +1    -1    src/declarativeimports/core/iconitem.cpp

http://commits.kde.org/plasma-framework/86c1f46eaa2ffe3849e6e76c1ff2c8a27ed92a75