Prevent crash when requesting icon with negative size

REVIEW: 118613
BUG: 335939