src/declarativeimports/core/iconitem.cpp
@@ -292,7 +292,7 @@ void IconItem::loadPixmap()
     //final pixmap to paint
     QPixmap result;
     if (size <= 0) {
-        //m_iconPixmaps.clear();
+        m_pixmapIcon = QPixmap();
         m_animation->stop();
         update();
         return;
